add build stripts and native image configuration